<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/button_prime_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_button_prime_number"/>

        <Button
            android:id="@+id/button_fibonacci_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_button_fibonacci_number"/>
    </LinearLayout>

    <Switch
        android:id="@+id/switch_columns"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@color/background_switch"
        android:checked="false"
        android:textColor="@color/black"
        android:text="@string/text_switch_columns"
        android:textOff="@string/text_switch_two_columns"
        android:textOn="@string/text_switch_three_columns"
        android:showText="true"
        />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list_numbers"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>




</LinearLayout>